--- a/packrat/styles/keeper/pane.less
+++ b/packrat/styles/keeper/pane.less
@@ -22,6 +22,8 @@
   height: auto;
   border: solid @pane-color;
   border-width: @pane-head-height @pane-edge-width 0;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   background: #f1f1f1;
   font-size: 12px;
   line-height: 15px;
